fixed horizontal scrolling

--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -26,6 +26,11 @@
   box-sizing: border-box;
 }
 
+body {
+  max-width: 100vw;
+  overflow-x: hidden;
+}
+
 p,
 span,
 li {
